--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -1,6 +1,15 @@
+html{
+    font-size: 62.5%;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+}
+
 .resume-container{
     width: 210mm;
     min-height: 297mm;
-    padding: 3rem 2rem;
     box-shadow: 0px 0px 3px 2px rgb(223, 223, 223);
+    display: flex;
 }
