--- a/src/styles/leftComponent.css
+++ b/src/styles/leftComponent.css
@@ -27,8 +27,13 @@ html{
 
 .details--section p{
     font-size: 1.5rem;
-    text-align: center;
     font-weight: 500;
+}
+
+.details--section{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .details-section--container{
