--- a/src/styles/leftComponent.css
+++ b/src/styles/leftComponent.css
@@ -59,3 +59,27 @@ html{
     border-bottom: 1px solid #95bd00;
     text-align: center;
 }
+
+.skill-component--container{
+    display: flex;
+    width: max-content;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.skill-tag{
+    width: max-content;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    border: 1px solid #95bd00;
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
+.skill-tag--container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-top: 2rem;
+    justify-content: center;
+}
