--- a/src/styles/leftComponent.css
+++ b/src/styles/leftComponent.css
@@ -83,3 +83,34 @@ html{
     margin-top: 2rem;
     justify-content: center;
 }
+
+.level{
+    width: 2rem;
+    height: 2rem;
+    border-radius: 1rem;
+    border: 1px solid #95bd00;
+    cursor: pointer;
+}
+
+.fill{
+    background-color: #95bd00;
+}
+
+.level--container{
+    display: flex;
+    gap: 0.5rem;
+}
+
+.language--container{
+    display: flex;
+    gap: 2rem;
+    margin-top: 2rem;
+    justify-content: flex-end;
+    margin-right: 2rem;
+    align-items: center;
+}
+
+.language--container p{
+    font-weight: 600;
+    font-size: 1.5rem;
+}
