--- a/src/styles/rightComponent.css
+++ b/src/styles/rightComponent.css
@@ -5,6 +5,7 @@
 
 .right--container h1{
     color: #95bd00;
+    font-size: 2.5rem;
 
 }
 
@@ -25,7 +26,7 @@
 
 .education--section hr{
     border: 0;
-    border-bottom: 1.5px solid rgba(149, 189, 0, 0.5);
+    border-bottom: 1.5px dotted rgba(149, 189, 0, 0.5);
 }
 
 .education--tag{
@@ -49,4 +50,8 @@
 
 .college-section{
     font-weight: 700;
+}
+
+.description--section{
+    font-weight: 400;
 }
