project section completed

--- a/src/styles/rightComponent.css
+++ b/src/styles/rightComponent.css
@@ -55,3 +55,9 @@
 .description--section{
     font-weight: 400;
 }
+
+.project--link{
+    font-weight: 500;
+    color: #95bd00;
+    margin-right: 10rem;
+}
