--- a/src/styles/rightComponent.css
+++ b/src/styles/rightComponent.css
@@ -31,11 +31,18 @@
 
 .education--tag{
     display: flex;
+    flex-direction: column;
     width: 100%;
     justify-content: space-between;
     font-size: 1.2rem;
     margin: 1rem 1rem;
     font-weight: 500;
+}
+
+.project--section{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .education-tag--container{
@@ -59,7 +66,7 @@
 .project--link{
     font-weight: 500;
     color: #95bd00;
-    margin-right: 10rem;
+    text-align: right;
 }
 
 .activity--component{
