--- a/src/styles/rightComponent.css
+++ b/src/styles/rightComponent.css
@@ -31,7 +31,6 @@
 
 .education--tag{
     display: flex;
-    flex-direction: column;
     width: 100%;
     justify-content: space-between;
     font-size: 1.2rem;
@@ -43,6 +42,7 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+    flex-direction: column;
 }
 
 .education-tag--container{
@@ -66,7 +66,7 @@
 .project--link{
     font-weight: 500;
     color: #95bd00;
-    text-align: right;
+    text-align: left;
 }
 
 .activity--component{
