--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,5 +1,6 @@
 html{
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 .container{
@@ -8,6 +9,7 @@ html{
     border-radius: 1rem;
     padding: 2rem 1rem;
     margin-bottom: 1rem;
+    width: inherit;
 }
 
 .container--message{
@@ -78,4 +80,9 @@ html{
     padding-bottom: 0.5rem;
     font-size: 2.5rem;
     border-bottom: 1px solid #95bd00;
+}
+
+.heading-icon{
+    color: #95bd00;
+    margin-right: 1rem;
 }
